# storybuddy

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.claude/: agent-config.json  settings.local.json
.claude/commands/: manual-test.md  speckit.specify.md
.github/: CI_SETUP.md
.github/hooks/: pre-push.example
.github/workflows/: auto-fix.yml  ci-flutter.yml  ci-python.yml  ci.yml  test-secrets.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: create-new-feature.sh
.specs/: ci-agent-sdk-integration-spec.md
docs/features/000-StoryBuddy-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/features/000-StoryBuddy-mvp/checklists/: voice-audio.md
docs/features/000-StoryBuddy-mvp/contracts/: openapi.yaml
docs/features/001-flutter-mobile-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/features/001-flutter-mobile-app/checklists/: full-feature.md  requirements.md  security.md  ux.md
docs/features/001-flutter-mobile-app/contracts/: openapi.yaml
docs/features/002-full-app-ui-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  status.md  tasks.md
docs/features/002-full-app-ui-flow/checklists/: requirements.md
docs/features/003-selectable-voice-kit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/features/003-selectable-voice-kit/contracts/: voice-api.yaml
docs/features/006-interactive-story-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
docs/features/006-interactive-story-mode/checklists/: requirements.md
docs/features/006-interactive-story-mode/contracts/: interaction-api.yaml  websocket-protocol.md
docs/research/: flutter-beta-deployment-guide.md
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/android/app/: build.gradle  build.gradle.kts
mobile/integration_test/: app_test.dart  user_journeys_test.dart
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/app/: router.dart  theme.dart
mobile/lib/core/audio/: audio_cache_manager.dart  audio_handler.dart  audio_streamer.dart  vad_service.dart
mobile/lib/core/constants/: env.dart
mobile/lib/core/data/: data_deletion_service.dart
mobile/lib/core/database/: database.dart  enums.dart
mobile/lib/core/errors/: exceptions.dart  failures.dart
mobile/lib/core/init/: app_initializer.dart
mobile/lib/core/monitoring/: battery_monitor.dart
mobile/lib/core/network/: api_client.dart  connectivity_service.dart  websocket_client.dart
mobile/lib/core/storage/: secure_storage_service.dart
mobile/lib/core/sync/: sync_manager.dart
mobile/lib/models/: voice_kit.dart
mobile/lib/shared/providers/: database_provider.dart
mobile/lib/shared/widgets/: connectivity_listener.dart  error_widget.dart  loading_indicator.dart  mode_toggle.dart  offline_indicator.dart  permission_request.dart  voice_status_indicator.dart
mobile/linux/: CMakeLists.txt
mobile/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
mobile/linux/runner/: my_application.cc
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/fixtures/: test_data.dart
mobile/test/helpers/: test_helpers.dart
mobile/test/mocks/: mock_services.dart
mobile/test/shared/widgets/: voice_status_indicator_test.dart
mobile/test/unit/core/: connectivity_service_test.dart  data_deletion_service_test.dart  sync_manager_test.dart
mobile/test/unit/pending_questions/: pending_question_repository_test.dart
mobile/test/unit/playback/: generate_audio_usecase_test.dart  playback_repository_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
mobile/windows/runner/: Runner.rc  main.cpp
scripts/: generate_demo_voices.py  generate_demo_voices_elevenlabs.py  setup-dev-env.sh
src/: __init__.py  config.py  main.py
src/api/: __init__.py  interaction.py  parents.py  qa.py  questions.py  stories.py  transcripts.py  voice.py  voice_routes.py
src/db/: __init__.py  init.py  repository.py
src/db/migrations/: 006_add_interaction_tables.py
src/migrations/: 001_create_voice_kits.sql  002_create_voice_characters.sql  003_create_voice_preferences.sql
src/models/: __init__.py  enums.py  interaction.py  parent.py  qa.py  question.py  story.py  transcript.py  voice.py
src/services/: __init__.py  llm.py  qa_handler.py  speech_recognition.py  story_generator.py  voice_cloning.py  voice_kit_service.py
src/services/interaction/: __init__.py  ai_responder.py  content_filter.py  logging.py  prompts.py  recording_service.py  retention_service.py  session_manager.py  streaming_stt.py  vad_service.py
src/services/transcript/: __init__.py  email_sender.py  generator.py  scheduler.py
src/services/tts/: azure_tts.py  base.py  cache.py  elevenlabs_tts.py  google_tts.py  ssml_utils.py
tests/: __init__.py  conftest.py
tests/contract/: test_interaction_settings.py  test_interaction_websocket.py  test_qa_api.py  test_questions_api.py  test_story_api.py  test_story_audio_api.py  test_transcripts_api.py  test_voice_api.py  test_voice_kit_api.py  test_voice_preferences_api.py
tests/e2e/: TEST_CASES.md  __init__.py  conftest.py  test_e2e_flows.py  test_health.py  test_parents.py  test_qa.py  test_stories.py  test_voice_profiles.py
tests/integration/: __init__.py  test_azure_tts.py  test_elevenlabs_voice_cloning.py  test_interaction_flow.py  test_pending_questions_flow.py  test_qa_flow.py  test_safe_ai_responses.py  test_story_audio_flow.py  test_story_generate_flow.py  test_story_import_flow.py  test_vad_accuracy.py  test_voice_flow.py
tests/unit/: __init__.py
tests/unit/services/: test_elevenlabs_tts.py  test_google_tts.py  test_tts_cache.py  test_voice_errors.py  test_voice_kit_service.py  test_voice_logging.py
(+160 files in other folders)
