[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storybuddy"
version = "0.1.0"
description = "AI-powered storytelling app with parent voice cloning"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "StoryBuddy Team"}
]
keywords = ["storytelling", "ai", "voice-cloning", "tts", "children"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "anthropic>=0.18.0",
    "elevenlabs>=1.0.0",
    "azure-cognitiveservices-speech>=1.35.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "google-cloud-texttospeech>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/storybuddy/storybuddy"
Repository = "https://github.com/storybuddy/storybuddy"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures need to be in function signatures even if "unused"
"tests/**/*.py" = ["ARG001", "ARG002", "SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "elevenlabs.*",
    "azure.*",
    "azure.cognitiveservices.*",
    "azure.cognitiveservices.speech.*",
    "google.cloud.*",
    "uvicorn.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "src.services.tts.*",
    "src.services.voice_cloning",
    "src.services.voice_kit_service",
]
# These modules have complex provider abstractions that need refactoring
disable_error_code = ["no-untyped-def", "no-untyped-call", "no-any-return", "call-arg", "assignment", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "src.api.*",
]
# API modules call services that have type issues
disable_error_code = ["no-untyped-call", "call-arg"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
